[package]
name = "pino"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Local reverse proxy in front of api.anthropic.com with prompt-cache breakpoint injection, body mutation, and a live savings dashboard."
autobins = false

[lib]
name = "pino"
path = "src/lib.rs"

[[bin]]
name = "pino-proxy"
path = "src/main.rs"

[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[[bin]]
name = "cache-stats"
path = "src/bin/cache_stats.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time"] }
axum = { version = "0.7", features = ["http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
flate2 = "1"
brotli = "7"
zstd = "0.13"
time = { version = "0.3" }
fastrand = "2"
bytes = "1"
futures-util = "0.3"
async-stream = "0.3"
http = "1"

[profile.release]
opt-level = 3
lto = "thin"
